@@ -15,16 +15,18 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import com.example.AgenciaTurismo.dto.HotelDTO;
 
+import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Locale;
 import java.util.stream.Collectors;
 
 @Service
-public class HotelService implements IHotelService{
+public class HotelService implements IHotelService {
     @Autowired
     private IHotelRepository hotelRepository;
 
-    private List<HotelReservedDTO> hotelReserve = new ArrayList<>();
+    private final List<HotelReservedDTO> hotelReserve = new ArrayList<>();
 
     public List<HotelDTO> listHotelsDTO() {
         return hotelRepository.findAll().stream()
@@ -42,53 +44,14 @@ public class HotelService implements IHotelService{
 
     @Override
     public HotelAvailableDTO hotelesDisponibles(HotelConsultDTO hotelConsultDTO) {
-        List<HotelDTO> listHotelDTO = listHotelsDTO();
+        // Verificar si hay hoteles disponibles para las fechas y el destino
+        List<HotelDTO> availableHotel = validarHotelesDisponibles(hotelConsultDTO);
 
-        List<HotelDTO> availableHotel = new ArrayList<>();
-        for (HotelDTO hotel : listHotelDTO) {
-            if (hotel.getDestination().equals(hotelConsultDTO.getDestination())
-                    && hotel.getDateFrom().equals(hotelConsultDTO.getDateFrom())
-                    && hotel.getDateTo().equals(hotelConsultDTO.getDateTo())){
-                  availableHotel.add(hotel);
-            }
-        }
-
-        if(availableHotel.isEmpty()){
-            throw new InvalidReservationException("No hay hoteles disponibles para las fechas y la ruta especificadas.");
-        }
-
+        // Crear y configurar el objeto HotelAvailableDTO
         HotelAvailableDTO hotelAvailable = new HotelAvailableDTO();
         hotelAvailable.setAvailableHotelDTO(availableHotel);
 
-
         return hotelAvailable;
-    }
-
-    //Evalua el metodo de pago ingresado para poder hacer el carlculo de la reserva.
-    @Override
-    public Double calcInterest(Double amount, Integer dues, String type) {
-
-        if(type.equalsIgnoreCase("Debit") || type.equalsIgnoreCase("Credit")){
-            if(type.equalsIgnoreCase("Debit") && dues > 1) {
-                throw new InvalidReservationException("No puede pagar en cuotas con tarjeta de debito.");
-            } else
-                switch (dues) {
-                    case 1:
-                        return 0.0;
-                    case 2,3:
-                        return amount * 0.05;
-                    case 4,5,6:
-                        return amount * 0.10;
-                    case 7,8,9,10,11,12:
-                        return amount * 0.20;
-                    default:
-                        throw new InvalidReservationException("Número de cuotas no válido.");
-                }
-        }else{
-            throw new InvalidReservationException("Tipo de pago no válido.");
-        }
-
-
     }
 
     @Override
@@ -98,10 +61,18 @@ public class HotelService implements IHotelService{
             throw new InvalidReservationException("La reserva ya está realizada.");
         }
 
-        List<HotelDTO> listHotelDTO = listHotelsDTO();
+        roomCapacity(finalHotelReservationDTO.getHotelReservationDTO());
+
+
+        HotelConsultDTO hotelBuscado = new HotelConsultDTO(finalHotelReservationDTO.getHotelReservationDTO().getDateFrom(),
+                finalHotelReservationDTO.getHotelReservationDTO().getDateTo(),
+                finalHotelReservationDTO.getHotelReservationDTO().getDestination());
+
+        List<HotelDTO> availableHotel = validarHotelesDisponibles(hotelBuscado);
+
 
         HotelDTO hotelToReserved = null;
-        for (HotelDTO hotel : listHotelDTO) {
+        for (HotelDTO hotel : availableHotel) {
             if (hotel.getDestination().equalsIgnoreCase(finalHotelReservationDTO.getHotelReservationDTO().getDestination())
                     && hotel.getDateFrom().equals(finalHotelReservationDTO.getHotelReservationDTO().getDateFrom())
                     && hotel.getDateTo().equals(finalHotelReservationDTO.getHotelReservationDTO().getDateTo())) {
@@ -132,21 +103,8 @@ public class HotelService implements IHotelService{
         return totalHotelReservationDTO;
     }
 
-    @Override
-    public Boolean reserveSaved(FinalHotelReservationDTO finalHotelReservationDTO) {
-        for (HotelReservedDTO reservaGuardada : hotelReserve){
-            FinalHotelReservationDTO reservaExistente = reservaGuardada.getHotelReserved().getFinalHotelReservation();
-            if (reservaExistente.equals(finalHotelReservationDTO)) {
-                return true;
-            }
-        }
-        return false;
-    }
 
-    @Override
-    public List<HotelReservedDTO> hotelSaved() {
-        return hotelReserve;
-    }
+                                        //CRUD
 
     //CREATE
     @Override
@@ -186,56 +144,145 @@ public class HotelService implements IHotelService{
             return new ResponseDTO("Hotel no encontrado");
         }
     }
+
     //DELETE
     @Override
     public ResponseDTO deleteHotel(String hotelCode) {
         Hotel hotel = hotelRepository.deleteHotel(hotelCode);
-        if(hotel != null){
+        if (hotel != null) {
             return new ResponseDTO("Hotel eliminado con éxito");
-        }else {
+        } else {
             return new ResponseDTO("No se encontro el hotel a eliminar");
         }
 
     }
 
-    //comparar tupo de habitacion con cantidad de personas ingresadas
-    public Boolean roomCapacity(HotelReservationDTO reservation){
-        Integer people;
 
-        switch (reservation.getRoomType()){
+
+                                    //METODOS PARA REUTILIZAR
+    @Override
+    public Boolean reserveSaved(FinalHotelReservationDTO finalHotelReservationDTO) {
+        for (HotelReservedDTO reservaGuardada : hotelReserve) {
+            FinalHotelReservationDTO reservaExistente = reservaGuardada.getHotelReserved().getFinalHotelReservation();
+            if (reservaExistente.equals(finalHotelReservationDTO)) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    @Override
+    public List<HotelReservedDTO> hotelSaved() {
+        return hotelReserve;
+    }
+
+    //Evalua el metodo de pago ingresado para poder hacer el carlculo de la reserva.
+    @Override
+    public Double calcInterest(Double amount, Integer dues, String type) {
+
+        if (type.equalsIgnoreCase("Debit") || type.equalsIgnoreCase("Credit")) {
+            if (type.equalsIgnoreCase("Debit") && dues > 1) {
+                throw new InvalidReservationException("No puede pagar en cuotas con tarjeta de debito.");
+            } else
+                switch (dues) {
+                    case 1:
+                        return 0.0;
+                    case 2, 3:
+                        return amount * 0.05;
+                    case 4, 5, 6:
+                        return amount * 0.10;
+                    case 7, 8, 9, 10, 11, 12:
+                        return amount * 0.20;
+                    default:
+                        throw new InvalidReservationException("Número de cuotas no válido.");
+                }
+        } else {
+            throw new InvalidReservationException("Tipo de pago no válido.");
+        }
+
+    }
+
+    //comparar tIpo de habitacion con cantidad de personas ingresadas
+    public Boolean roomCapacity(HotelReservationDTO reservation) {
+        Double people;
+
+
+        switch (reservation.getRoomType()) {
             case "Single":
-                people = 1;
+                people = 1D;
                 break;
             case "Doble":
-                people = 2;
+                people = 2D;
                 break;
             case "Triple":
-                people = 3;
+                people = 3D;
                 break;
             case "Múltiple":
-                people = 4;
+                people = 4D;
                 break;
             default:
-                people = 0;
+                people = 0D;
                 break;
         }
-        if(people != reservation.getPeopleDTO().size()){
-            throw new IllegalArgumentException ("La cantidad de personas no coincide con el tipo de habitación.");
+        if (!people.equals(reservation.getPeopleAmount())) {
+            throw new IllegalArgumentException("La cantidad de personas no coincide con el tipo de habitación.");
+        } else if (people != reservation.getPeopleDTO().size()) {
+            throw new IllegalArgumentException("El tipo de habitación seleccionada no coincide con la cantidad de personas que se alojarán en ella.");
         }
         return true;
     }
 
-//Validando existencia del destino solicitado.
+    // Validando Hoteles disponible
+    @Override
+    public List<HotelDTO> validarHotelesDisponibles(HotelConsultDTO hotelConsultDTO) {
+        // llamamo al metodo que verifica la existencia del destino
+        destinationValid(hotelConsultDTO.getDestination());
+
+        // llamamos al metodo que verifica las fechas
+        dateValid(hotelConsultDTO.getDateFrom(), hotelConsultDTO.getDateTo());
+
+        List<HotelDTO> listHotelDTO = listHotelsDTO();
+
+        List<HotelDTO> availableHotel = new ArrayList<>();
+        for (HotelDTO hotel : listHotelDTO) {
+            if (hotel.getDateFrom().equals(hotelConsultDTO.getDateFrom())
+                    && hotel.getDateTo().equals(hotelConsultDTO.getDateTo())) {
+                availableHotel.add(hotel);
+            }
+        }
+
+        if (availableHotel.isEmpty()) {
+            throw new InvalidReservationException("No hay hoteles disponibles para las fechas y la ruta especificadas.");
+        }
+
+        return availableHotel;
+    }
+
+    //Validando fechas
+    @Override
+    public Boolean dateValid(LocalDate dateFrom, LocalDate dateTo) {
+        if (!dateFrom.isBefore(dateTo)) {
+            throw new IllegalArgumentException("La fecha de entrada debe ser menor a la de salida");
+        } else
+            return true;
+    }
+
+    //Validando existencia del destino solicitado.
     public Boolean destinationValid(String destination) {
         List<String> validDestination = listHotelsDTO().stream()
                 .map(HotelDTO::getDestination)
-                .collect(Collectors.toList());
-        if(validDestination.contains(destination)){
+                .toList();
+        if (validDestination.contains(destination)) {
             return true;
         }
-        throw new IllegalArgumentException("El destino es inexistente");
+        throw new IllegalArgumentException("El destino elegido  no existe");
     }
-
-
-
 }
+
+
+
+
+
+
+
+
